--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p class="hello">Hello I'am</p>
                 <h2 class="name">Afroja Jahan</h2>
                 <p class="details">My passion is designing and colouring webpage.You judge me what i am.</p>
-                <a href="www.github.com/Afrojajahan">HIRE ME</a>
+                <a href="www.github.com/Afrojajahan/personal_website">HIRE ME</a>
             </div>
             <div class="my-pic1">
                 <img src="images/image 16 (1).png"/>
@@ -29,7 +29,7 @@
             <div class="bio">
                 <h3 class="name">Biography</h3>
                 <p class="details">My dream is becoming a world class web developer and I am doing my best to reach peak of success.</p>
-                <a href="www.github.com/Afrojajahan">DOWNLOAD CV</a>
+                <a href="www.github.com/Afrojajahan/personal_website">DOWNLOAD CV</a>
             </div>
         </div>
     </section>
